# mcp-atlassian

./: .env.example  .gitignore  docker-compose.proxy.yml
.claude/agent-memory/access-control-architect/: MEMORY.md
.claude/agents/: access-control-architect.md
proxy/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  RUNBOOK.md  pyproject.toml
proxy/docs/: local-debug.md
proxy/scripts/: start-proxy.sh
proxy/src/mcp_proxy/: audit.py  config.py  enforcement.py  forward.py  main.py
proxy/tests/integration/: test_proxy_e2e.py
proxy/tests/unit/: test_audit.py  test_config.py  test_enforcement.py  test_identity.py
scripts/: inspect_mcp_http.sh
solutions/: auth-config-guide.md  ds-2031-access-control-plan-decorator-rbac.md  ds-2031-access-control-plan-full-fork-enforcement.md  ds-2031-access-control-plan-pat-only.md  ds-2031-access-control-plan-proxy-gateway.md  ds-2031-access-control.md  troubleshoot-http-streamable.md
